--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,3 +80,14 @@ center {
     width: 500px;
     margin: 0 auto;
 }
+
+/* Embed #1 */
+.embedone {
+    width: 1108px; /* you have to have a size or this method doesn't work */
+    height: 623px; /* think about making these max-width instead - might give you some more responsiveness */
+
+    position: absolute; /* positions out of the flow, but according to the nearest parent */
+    top: 0; right: 0; /* confuse it i guess */
+    bottom: 0; left: 0;
+    margin: auto; /* make em equal */
+}
