Updated more of the discord theme css

--- a/other/themes/GitHub-Dark/GitHub-Dark.theme.css
+++ b/other/themes/GitHub-Dark/GitHub-Dark.theme.css
@@ -3,7 +3,7 @@
     * @version 1.0.0
     * @description A modified version of the GitHub Dark Discord theme by Sango.
     * @author Tay
-    * @source https://github.com/moistp1ckle/GitHub_Dark
+    * @source https://github.com/tayrp/tayrp.github.io/tree/main/other/themes/GitHub-Dark
     * @website https://tay.is-a.dev/
 **/
 
