Updated a css becuase I put wrong link

--- a/other/themes/Material-Discord/Material-Discord.theme.css
+++ b/other/themes/Material-Discord/Material-Discord.theme.css
@@ -13,7 +13,7 @@
 @import url(https://tay.is-a.dev/other/themes/Material-Discord/css/source.css);
 
 /* Material You addon */
-@import url(https://github.com/tayrp/tayrp.github.io/blob/main/other/themes/Material-Discord/css/addons/material-you/source.css);
+@import url(https://tay.is-a.dev/other/themes/Material-Discord/css/addons/material-you/source.css);
 
 /* MATERIAL YOU DARK THEME SETTINGS */
 .theme-dark {
