--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,15 @@ ul.navbar-nav {
 	text-indent: -696969px;
 }
 
+.dw1 {
+	text-align: center;
+	margin: auto;
+	width: 1000px; 
+	padding: 260px;
+	color: #b1cbcc;
+	font-size: 22px;
+}
+
 .about {
 	text-align: center;
 	margin: auto;
