--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,15 @@ ul.navbar-nav {
 	font-size: 22px;
 }
 
+.pageslist {
+	text-align: center;
+	margin: auto;
+	width: 1000px; 
+	padding: 260px;
+	color: #b1cbcc;
+	font-size: 22px;
+}
+
 .about {
 	text-align: center;
 	margin: auto;
