--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,43 @@ body {
 	background-color: #36454F;
 }
 
+* {
+	box-sizing: border-box;
+}
+
+#aboutvideo {
+	position: fixed;
+	right: 0;
+	bottom: 0;
+	min-width: 100%; 
+	min-height: 100%;
+  }
+  
+  .aboutcontent {
+	position: fixed;
+	bottom: 0;
+	background: rgba(0, 0, 0, 0.5);
+	color: #f1f1f1;
+	width: 100%;
+	padding: 20px;
+  }
+  
+  #aboutpauseBtn {
+	width: 200px;
+	font-size: 18px;
+	padding: 10px;
+	border: none;
+	background: #000;
+	color: #fff;
+	cursor: pointer;
+  }
+  
+  #aboutpauseBtn:hover {
+	background: #ddd;
+	color: black;
+  }
+
+
 .section-container { margin: 0 auto; padding-bottom: 80px; }
 .section-description { margin-top: 60px; padding-bottom: 10px; }
 .section-description p { margin-top: 20px; padding: 0 120px; }
