--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,6 @@ body {
     text-align: center;
 	background-color: #36454F;
 }
-
 * {
 	box-sizing: border-box;
 }
@@ -20,6 +19,30 @@ body {
 	bottom: 0;
 	min-width: 100%; 
 	min-height: 100%;
+  }
+  
+  .aboutcontent {
+	position: fixed;
+	bottom: 0;
+	background: rgba(0, 0, 0, 0.5);
+	color: #f1f1f1;
+	width: 100%;
+	padding: 20px;
+  }
+  
+  #aboutbtn {
+	width: 200px;
+	font-size: 18px;
+	padding: 10px;
+	border: none;
+	background: #000;
+	color: #fff;
+	cursor: pointer;
+  }
+  
+  #aboutbtn:hover {
+	background: #ddd;
+	color: black;
   }
 
 .section-container { margin: 0 auto; padding-bottom: 80px; }
@@ -79,7 +102,7 @@ ul.navbar-nav {
 }
 
 /* About */
-.index {
+.about {
 	text-align: center;
 	margin: auto;
 	width: 1000px; 
