Updated css and about.html fr this time.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,31 +142,22 @@ div.pl {
 	display: inline-block;
 	text-align: left;
   }
-/* About stuff */
-  body {
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: black;
-    z-index: 1;
-}
 
-.content {
+/* About Page */
+.aboutcontent {
     text-align: center;
     color: white;
     z-index: 1;
     font-size: 30px;
 }
 
-#images {
+#aboutimages {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.social-logo {
+.aboutsocial-logo {
     padding-left: 15px;
     padding-right: 1px;
     transition: transform 0.2s;
@@ -174,7 +165,7 @@ div.pl {
     height: 47px;
 }
 
-video {
+aboutvideo {
     position: fixed;
     top: 50%;
     left: 50%;
