Adding timezone to my home page.

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -1,9 +1,13 @@
 {{ define "main" }}
 <main>
     <div class="about">
-    <div>
-        <p>Hello and Welcome, My name is Tee.</p>
+        <div>
+            <h3 id="date-time">time</h3>
+            <script src="/assets/js/timezone.js"></script>
+            <p>Hello and Welcome, My name is Tee.</p>
+            <p>I like to go by Tee, Rhea, or Kara.</p>
+            <p>I like to go by Tee, Rhea, or Kara.</p>
+        </div>
     </div>
-</div>
 </main>
 {{ end }}
