Added my Discord status to the navbar.

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -27,7 +27,11 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="/">Tee</a>
+				<a class="navbar-brand" href="/">
+					Tee
+					<img id="dcstat" alt="Status" width="75" style="margin-left: 55px; margin-top: -17px">
+					<script src="/assets/js/lanyard.js"></script>
+				</a>
 				<link rel="home" href="/" />
 			</div>
 			<div class="collapse navbar-collapse" id="top-navbar-1">
