--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -6,6 +6,7 @@
             <script src="/assets/js/timezone.js"></script>
             <p>Hello and Welcome, My name is Tee.</p>
             <p>I prefer to go by Tee, Rhea, or Kara.</p>
+            <p>My preferred pronouns are She/They</p>
             <p style="font-size: 20px;">
                 <a href="https://nohello.net/en/">NoHello</a> |
                 <a href="https://dontasktoask.com/">DontAskToAsk</a> |
