Updated home page, Adding some more info

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -2,15 +2,18 @@
 <main>
     <div class="about">
         <div>
-            <h3 id="date-time">time</h3>
+            <h4 id="date-time">time</h4>
             <script src="/assets/js/timezone.js"></script>
             <p>Hello and Welcome, My name is Tee.</p>
-            <p>I prefer to go by Tee, Rhea, or Kara.</p>
+            <p>I prefer to go by Tee, Riya, Rhea, or Kara.</p>
             <p>My preferred pronouns are She/They</p>
+            <p>Shows & Movies I like include, Doctor Who, DC Universe, Marvel Universe.</p>
+            <p>Games I like include, Minecraft, Terraria, BeamNG.drive and DayZ.</p>
             <p style="font-size: 20px;">
                 <a href="https://nohello.net/en/">NoHello</a> |
                 <a href="https://dontasktoask.com/">DontAskToAsk</a> |
                 <a href="https://xyproblem.info/">XYProblem</a>
+                <h5>NOTE: Mocking me will result in a block, I don't care who you are.</h5>
             </p>
         </div>
     </div>
