--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9,6 +9,19 @@ body {
     text-align: center;
 	background-color: #36454F;
 }
+
+/* @import url('https://fonts.googleapis.com/css2?family=Cactus+Classical+Serif&family=Shantell+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+body {
+    font-family: 'Shantell Sans', sans-serif;
+    font-size: 16px;
+    font-weight: 300;
+    color: #888;
+    line-height: 30px;
+    text-align: center;
+	background-color: #36454F;
+} */
+
 * {
 	box-sizing: border-box;
 }
