--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -2,7 +2,7 @@
 <main>
     <div class="about">
         <div>
-            <h4 id="date-time">time</h4>
+            <b id="date-time">time</b>
             <script src="/assets/js/timezone.js"></script>
             <p>Hello and Welcome, My name is Tee.</p>
             <p>I prefer to go by Tee, Riya, Rhea, or Kara.</p>
@@ -13,7 +13,8 @@
                 <a href="https://nohello.net/en/">NoHello</a> |
                 <a href="https://dontasktoask.com/">DontAskToAsk</a> |
                 <a href="https://xyproblem.info/">XYProblem</a>
-                <h5>NOTE: Mocking me will result in a block, I don't care who you are.</h5>
+            <!--<h5>NOTE: Mocking me will result in a block, I don't care who you are.</h5>-->
+            <!--<h5>It's fine if I consider you a friend, Or I talk to you often and I don't hate you.</h5>-->
             </p>
         </div>
     </div>
