--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -4,7 +4,7 @@
         <div>
             <b id="date-time">time</b>
             <script src="/assets/js/timezone.js"></script>
-            <p>Hello and Welcome, My name is Tee.</p>
+            <p>Hello and Welcome, You may call me Tee.</p>
             <p>I prefer to go by Tee, Riya, Rhea, or Kara.</p>
             <p>My preferred pronouns are She/They</p>
             <p>Shows & Movies I like include, Doctor Who, DC Universe, Marvel Universe.</p>
