--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -15,6 +15,7 @@
 	<link rel="stylesheet" href="/assets/css/about/style.css">
 	<link rel="stylesheet" href="/assets/css/style.css">
 	<link rel="shortcut icon" href="/assets/imgs/favicon.png">
+	<script src="assets/js/disableFullscreen.js"></script>
 </head>
 
 <body>
