Updated and reformated literally everything

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -1,22 +1,24 @@
 {{ define "main" }}
 <main>
-    <div class="about">
-        <div>
-            <b id="date-time">time</b>
-            <script src="/assets/js/timezone.js"></script>
-            <p>Hello and Welcome, You may call me Tee.</p>
-            <p>I prefer to go by Tee, Riya, Rhea, or Kara.</p>
-            <p>My preferred pronouns are She/They</p>
-            <p>Shows & Movies I like include, Doctor Who, DC Universe, Marvel Universe.</p>
-            <p>Games I like include, Minecraft, Terraria, BeamNG.drive and DayZ.</p>
-            <p style="font-size: 20px;">
-                <a href="https://nohello.net/en/">NoHello</a> |
-                <a href="https://dontasktoask.com/">DontAskToAsk</a> |
-                <a href="https://xyproblem.info/">XYProblem</a>
-            <!--<h5>NOTE: Mocking me will result in a block, I don't care who you are.</h5>-->
-            <!--<h5>It's fine if I consider you a friend, Or I talk to you often and I don't hate you.</h5>-->
-            </p>
-        </div>
+  <div class="about">
+    <div>
+      <b id="date-time">time</b>
+      <script src="/assets/js/timezone.js"></script>
+      <p>Hello and Welcome, You may call me Tee.</p>
+      <p>I prefer to go by Tee, Riya, Rhea, or Kara.</p>
+      <p>My preferred pronouns are She/They</p>
+      <p>
+        Shows & Movies I like include, Doctor Who, DC Universe, Marvel Universe.
+      </p>
+      <p>Games I like include, Minecraft, Terraria, BeamNG.drive and DayZ.</p>
+      <p style="font-size: 20px">
+        <a href="https://nohello.net/en/">NoHello</a> |
+        <a href="https://dontasktoask.com/">DontAskToAsk</a> |
+        <a href="https://xyproblem.info/">XYProblem</a>
+        <!--<h5>NOTE: Mocking me will result in a block, I don't care who you are.</h5>-->
+        <!--<h5>It's fine if I consider you a friend, Or I talk to you often and I don't hate you.</h5>-->
+      </p>
     </div>
+  </div>
 </main>
 {{ end }}
