--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,4 @@
 {{ define "main" }}
 <!-- what ill be for the rest of my life -->
-<main>
-    {{ .Content }}
-</main>
+<main>{{ .Content }}</main>
 {{ end }}
