changed pause and unpause button on about

--- a/public/assets/css/about/style.css
+++ b/public/assets/css/about/style.css
@@ -41,3 +41,9 @@ video {
   filter: blur(7px);
   opacity: 65%;
 }
+
+#aboutpauseBtn {
+  font-size: 3rem;
+  padding: 10px;
+  display: inline-block;
+}
