Updated font once again.. I want to fix navbar :(

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -1,4 +1,5 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap");
+/*
+@import url("https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap");
 
 body {
   font-family: "Play", sans-serif;
@@ -11,12 +12,40 @@ body {
 }
 */
 
+/*
 @import url("https://fonts.googleapis.com/css2?family=Cactus+Classical+Serif&family=Shantell+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
 body {
   font-family: "Shantell Sans", sans-serif;
   font-size: 16px;
   font-weight: 300;
+  color: #888;
+  line-height: 30px;
+  text-align: center;
+  background-color: #36454f;
+}
+*/
+
+/*
+@import url("https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap");
+
+body {
+  font-family: "La Belle Aurore", cursive;
+  font-size: 16px;
+  font-weight: 300;
+  color: #888;
+  line-height: 30px;
+  text-align: center;
+  background-color: #36454f;
+}
+*/
+
+@import url("https://fonts.googleapis.com/css2?family=Vujahday+Script&display=swap");
+
+body {
+  font-family: "Vujahday Script", cursive;
+  font-size: 18px;
+  font-weight: 360;
   color: #888;
   line-height: 30px;
   text-align: center;
