--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -40,6 +40,7 @@ body {
 }
 */
 
+
 @import url("https://fonts.googleapis.com/css2?family=Vujahday+Script&display=swap");
 
 body {
@@ -130,7 +131,7 @@ body {
 }
 
 ul.navbar-nav {
-  font-family: "Shantell Sans", sans-serif;
+  font-family: "Vujahday Script", cursive;
   font-size: 14px;
   color: #fff;
   font-weight: 400;
@@ -143,11 +144,11 @@ ul.navbar-nav {
   padding: 6px 15px;
   background: #b1cbcc;
   border: 0;
-  font-family: "Shantell Sans", sans-serif;
+  font-family: "Vujahday Script", cursive;
   font-size: 14px;
-  font-weight: 300;
+  font-weight: 360;
   color: #fff;
-  opacity: 1;
+  opacity: 0.7;
   text-transform: uppercase;
   -moz-border-radius: 6px;
   -webkit-border-radius: 6px;
