Added discussions, Using discus.

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -15,8 +15,22 @@
         <a href="https://nohello.net/en/">NoHello</a> |
         <a href="https://dontasktoask.com/">DontAskToAsk</a> |
         <a href="https://xyproblem.info/">XYProblem</a>
-        <!--<h5>NOTE: Mocking me will result in a block, I don't care who you are.</h5>-->
-        <!--<h5>It's fine if I consider you a friend, Or I talk to you often and I don't hate you.</h5>-->
+        <script
+          src="https://giscus.app/client.js"
+          data-repo="tayrp/tayrp.github.io"
+          data-repo-id="R_kgDOLkMSbw"
+          data-category="Constructive Critism"
+          data-category-id="DIC_kwDOLkMSb84Ci9E6"
+          data-mapping="pathname"
+          data-strict="0"
+          data-reactions-enabled="0"
+          data-emit-metadata="1"
+          data-input-position="top"
+          data-theme="dark"
+          data-lang="en"
+          crossorigin="anonymous"
+          async
+        ></script>
       </p>
     </div>
   </div>
