Adding a little rectangle background to the footer

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -65,6 +65,12 @@
     </nav>
     {{ block "main" . }} {{ end }}
     <footer>
+      <div style="background: #ed9458; border-radius: 25px;
+      font-size: 20px; 
+      width: 5px
+      padding: 10px; 
+      border: 1px solid #FFFFFF;
+      margin: 5px;">
       <!-- Remove "Vecteezy Credits" once background removed -->
       Credits:
       <a
