--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -4,7 +4,7 @@
     <div style="background: #ed9458; border-radius: 25px;
             font-size: 20px; 
             padding: 10px; 
-            border: 1px solid lightgray; 
+            border: 1px solid #FFFFFF; 
             margin: 10px;">
             <div>
               <b id="date-time">time</b>
