--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 <main>
   <div class="about">
-    <div style="background: #ed9458; border-radius: 25px;
+    <div style="background: #FC4C02; border-radius: 25px;
             font-size: 20px; 
             padding: 10px; 
             border: 1px solid #FFFFFF; 
