Reformatted files, Updates to CSS, About video.

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="/assets/css/animate.css" />
     <link rel="stylesheet" href="/assets/css/style.css" />
     <link rel="stylesheet" href="/assets/css/about/style.css" />
-    <link rel="shortcut icon" href="/assets/imgs/favicon.png" />
+    <link rel="shortcut icon" href="/assets/imgs/pfps/favicon.png" />
   </head>
 
   <body>
@@ -73,7 +73,7 @@
       <div class="container">
         <div
           style="
-            background: #ed9458;
+            background: #ff96b4;
             border-radius: 25px;
             font-size: 20px;
             width: 650px;
