--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -1,17 +1,7 @@
 {{ define "main" }}
 <main>
-  <div class="about">
-    <div
-      style="
-        background: #ed9458;
-        border-radius: 25px;
-        font-size: 20px;
-        padding: 10px;
-        border: 1px solid #ffffff;
-        margin: 10px;
-      "
-    >
-      <div>
+  <div class="bgbox">
+      <div class="home">
         <b id="date-time">time</b>
         <script src="/assets/js/timezone.js"></script>
         <p>Hello and Welcome, You may call me Tee.</p>
@@ -22,6 +12,7 @@
           Universe.
         </p>
         <p>Games I like include, Minecraft, Terraria, BeamNG.drive and DayZ.</p>
+        <p>I enjoy GTA V RP, I am whitelisted on <a href="https://discord.gg/redlinerp">Redline RP</a> and <a href="https://discord.gg/circuit">Circuit V2</a></p>
         <p style="font-size: 20px">
           <a href="https://nohello.net/en/">NoHello</a> |
           <a href="https://dontasktoask.com/">DontAskToAsk</a> |
