Changed some css

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -51,15 +51,6 @@
             />
             <script src="/assets/js/lanyard.js"></script>
           </a>
-          <a
-            style="margin-left: 59px; margin-top: 7px; display: inline-block"
-            href="https://github.com/tayrp/tayrp.github.io/actions/workflows/hugo.yml"
-          >
-            <img
-              src="https://github.com/tayrp/tayrp.github.io/actions/workflows/hugo.yml/badge.svg?branch=main"
-              alt="Deploy Hugo site to Pages"
-            />
-          </a>
           <link rel="home" href="/" />
         </div>
         <div class="collapse navbar-collapse" id="top-navbar-1">
@@ -77,18 +68,7 @@
     {{ block "main" . }} {{ end }}
     <footer>
       <div class="container">
-        <div
-          style="
-            background: #ff96b4;
-            border-radius: 25px;
-            font-size: 20px;
-            width: 650px;
-            padding: 12px;
-            border: 1px solid #ffffff;
-            margin: 0px auto;
-            text-align: center;
-          "
-        >
+        <div class="bgboxfooter">
           <div class="row">
             &copy;
             <b
