--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -293,6 +293,6 @@ aboutvideo {
   font-size: 15px;
   padding: auto;
   border: 1px solid #FFFFFF;
-  margin: 10px;
+  margin: auto;
   color: #FFFFFF;
 }
