Added dark mode to the website :3

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,13 +1,6 @@
 <main>
     <div class="about">
-      <div>
-        <div style="background: #ed9458; border-radius: 25px;
-        font-size: 20px; 
-        padding: 10px; 
-        border: 1px solid #FFFFFF; 
-        margin: 10px;
-        text-align: center;
-        vertical-align: middle;">
+      <div class="bgbox">
         <p>404</p>
         <p>Page not found, Meaning it either does not exist or is broken.</p>
         <div>
